--- a/.travis.yml
+++ b/.travis.yml
@@ -63,8 +63,15 @@ before_script:
     fi
   - mkdir build
   - cd build
+  # Setup ccache
   # Make certain ~/.ccache exists
   - mkdir -p $HOME/.ccache
+  - ccache --version
+  - ccache --print-config
+  - ccache --show-stats
+before_cache:
+  # Check ccache
+  - ccache --show-stats
 script:
   - >
     if [[ "${BUILD_APIDOC}" == "true" && "${TRAVIS_BRANCH}" == "master" ]]; then
