--- a/.travis.yml
+++ b/.travis.yml
@@ -66,6 +66,7 @@ before_script:
   # Setup ccache
   # Make certain ~/.ccache exists
   - mkdir -p $HOME/.ccache
+  - echo sloppiness = file_macro > $HOME/.ccache/ccache.conf
   - ccache --version
   - ccache --print-config
   - ccache --show-stats
