In .travis.yml query compiler versions.

--- a/.travis.yml
+++ b/.travis.yml
@@ -66,9 +66,19 @@ before_script:
   # Setup ccache
   # Make certain ~/.ccache exists
   - mkdir -p $HOME/.ccache
+  - echo "Show /Users/travis/.ccache/ccache.conf"
+  - more /Users/travis/.ccache/ccache.conf
+  - echo "Show $HOME/.ccache/ccache.conf"
+  - more $HOME/.ccache/ccache.conf
   - echo sloppiness = file_macro > $HOME/.ccache/ccache.conf
   - ccache --version
   - ccache --show-stats
+  - which gcc
+  - which g++
+  - which cc
+  - which c++
+  - which clang
+  - which ccache
 before_cache:
   # Check ccache
   - ccache --show-stats
