--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,8 @@ install:
   - >
     if [[ "${TRAVIS_OS_NAME}" == "linux" ]]; then
       # Download build environment in a docker container
-      docker pull freeorion/freeorion-travis-build
+      # docker pull freeorion/freeorion-travis-build
+      docker build -t freeorion/freeorion-travis-build .
     fi
   - >
     if [[ "${TRAVIS_OS_NAME}" == "osx" ]]; then
@@ -84,9 +85,7 @@ before_cache:
   - ccache --show-stats
 script:
   - >
-    if [[ "${BUILD_APIDOC}" == "true" && "${TRAVIS_BRANCH}" == "master" ]]; then
-      apt-get install --assume-yes ccache
-    
+    if [[ "${BUILD_APIDOC}" == "true" && "${TRAVIS_BRANCH}" == "master" ]]; then      
       cmake ..
       cmake --build . --target cpp-apidoc
 
@@ -102,8 +101,6 @@ script:
     fi
   - >
     if [[ "${TRAVIS_OS_NAME}" == "linux" && "${BUILD_UNITTEST}" == "true" ]]; then
-      apt-get install --assume-yes ccache
-    
       cmake -DBUILD_TESTING=ON ..
       cmake --build . -- -j 2 &&
       cmake --build . --target unittest &&
