--- a/.travis.yml
+++ b/.travis.yml
@@ -43,6 +43,9 @@ install:
       # download and setup ccache
       brew install ccache
       export PATH="/usr/local/opt/ccache/libexec:$PATH"
+
+      # add coreutils to get gtimeout
+      brew install coreutils
     fi
 before_script:
   # Configure git to use the identity of FreeOrion Build Bot and
@@ -106,5 +109,6 @@ script:
   - >
     if [[ "${TRAVIS_OS_NAME}" == "osx" && -z "${BUILD_APIDOC}" ]]; then
       cmake -GXcode ..
-      cmake --build . --config Release -- -parallelizeTargets -jobs $(sysctl hw.ncpu | awk '{print $2}')
+      # timeout before Travis kills jobs so that ccache is partially populated
+      gtimeout 40m cmake --build . --config Release -- -parallelizeTargets -jobs $(sysctl hw.ncpu | awk '{print $2}')
     fi
