--- a/.travis.yml
+++ b/.travis.yml
@@ -28,8 +28,11 @@ install:
   - >
     if [[ "${TRAVIS_OS_NAME}" == "linux" ]]; then
       # Download build environment in a docker container
+      # TODO restore this line after SDK is updated.
       # docker pull freeorion/freeorion-travis-build
-      docker build -t freeorion/freeorion-travis-build .
+
+      # Create docker container from Dockerfile
+      docker build --tag freeorion/freeorion-travis-build . < tools/docker/Dockerfile 
     fi
   - >
     if [[ "${TRAVIS_OS_NAME}" == "osx" ]]; then
