--- a/.travis.yml
+++ b/.travis.yml
@@ -63,9 +63,9 @@ before_script:
   # Setup ccache
   # Make certain ~/.ccache exists
   - mkdir -p $HOME/.ccache
-  - echo "Show /Users/travis/.ccache/ccache.conf"
+  - echo "Show global /Users/travis/.ccache/ccache.conf"
   - more /Users/travis/.ccache/ccache.conf
-  - echo "Show $HOME/.ccache/ccache.conf"
+  - echo "Show local $HOME/.ccache/ccache.conf"
   - more $HOME/.ccache/ccache.conf
   # Allow ccache to account for __FILE__ macro
   - echo sloppiness = file_macro > $HOME/.ccache/ccache.conf
@@ -113,6 +113,6 @@ script:
   - >
     if [[ "${TRAVIS_OS_NAME}" == "osx" && -z "${BUILD_APIDOC}" ]]; then
       cmake -GXcode ..
-      # timeout before Travis kills jobs so that ccache is partially populated
+      # timeout before Travis kills jobs so that ccache is always at least partially populated
       gtimeout 40m cmake --build . --config Release -- -parallelizeTargets -jobs $(sysctl hw.ncpu | awk '{print $2}')
     fi
