--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,7 @@ install:
       # docker pull freeorion/freeorion-travis-build
 
       # Create docker container from Dockerfile
-      ln -s tools/docker/Dockerfile .
+      cp tools/docker/Dockerfile .
       docker build --tag freeorion/freeorion-travis-build . 
     fi
   - >
