--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,7 @@ install:
       # docker pull freeorion/freeorion-travis-build
 
       # Create docker container from Dockerfile
-      cp tools/docker/Dockerfile .
+      ln -s tools/docker/Dockerfile .
       docker build --tag freeorion/freeorion-travis-build . 
     fi
   - >
@@ -105,8 +105,7 @@ script:
   - >
     if [[ "${TRAVIS_OS_NAME}" == "linux" && "${BUILD_UNITTEST}" == "true" ]]; then
       cmake -DBUILD_TESTING=ON ..
-      # timeout before Travis kills jobs so that ccache is always at least partially populated
-      timeout 40m cmake --build . -- -j 2 &&
+      cmake --build . -- -j 2 &&
       cmake --build . --target unittest &&
       cd ../default &&
       python -m compileall -q .
